--- a/src/main/resources/templates/categories.html
+++ b/src/main/resources/templates/categories.html
@@ -2,13 +2,13 @@
 <html xmlns="http://www.w3.org/1999/xhtml"
       xmlns:th="http://www.thymeleaf.org"
       lang="en">
-    <head th:replace="fragments::head">
+    <head th:replace="fragments/layout::head('Categories')">
     </head>
     <body>
-        <header th:replace="fragments::header"></header>
+        <header th:replace="fragments/layout::header"></header>
         <div class="container">
-            <div th:replace="fragments::underHead('Categories')"></div>
-            <div th:replace="fragments::addButton('newCategory')"></div>
+            <div th:replace="fragments/layout::underHead('Categories')"></div>
+            <div th:replace="fragments/components::addButton('newCategory')"></div>
             <table class="table">
                 <thead class="thead-light">
                 <tr>
@@ -27,7 +27,7 @@
                 </tbody>
             </table>
         </div>
-        <footer th:replace="fragments::footer"></footer>
-        <script th:replace="fragments::enableTooltips"></script>
+        <footer th:replace="fragments/layout::footer"></footer>
+        <script th:replace="fragments/scripts::enableTooltips"></script>
     </body>
 </html>
