--- a/src/main/resources/templates/editPassword.html
+++ b/src/main/resources/templates/editPassword.html
@@ -2,59 +2,39 @@
 <html xmlns="http://www.w3.org/1999/xhtml"
       xmlns:th="http://www.thymeleaf.org"
       lang="en">
-    <head th:replace="fragments::head"></head>
+    <head th:replace="fragments/layout::head('Edit Password')"></head>
     <body>
-        <header th:replace="fragments::header"></header>
+        <header th:replace="fragments/layout::header"></header>
         <div class="container">
             <ul class="breadcrumb my-2">
                 <li class="breadcrumb-item"><a th:href="@{/}">Home</a></li>
                 <li class="breadcrumb-item active">Edit Password</li>
             </ul>
             <h3>Edit Password</h3>
-            <!-- BACKEND-ONLY VALIDATION
-            <form th:action="@{/user/editPassword}" th:object="${formPassword}" method="POST" action="#">
-                <div class="form-group">
-                    <label for="currentPassword">Current Password:</label>
-                    <input type="password" th:field="*{currentPassword}" class="form-control" id="currentPassword" placeholder="enter current password" />
-                    <div th:replace="fragments::backendValidationErrors('currentPassword')"></div>
-                </div>
-                <div class="form-group">
-                    <label for="newPassword">New Password:</label>
-                    <input type="password" th:field="*{password}" class="form-control" id="newPassword" placeholder="enter new password" />
-                    <div th:replace="fragments::backendValidationErrors('password')"></div>
-                </div>
-                <div class="form-group">
-                    <label for="newPasswordConfirm">Confirm New Password:</label>
-                    <input type="password" th:field="*{matchingPassword}" class="form-control" id="newPasswordConfirm" placeholder="confirm new password" />
-                    <div th:replace="fragments::backendValidationErrors('matchingPassword')"></div>
-                </div>
-                <button th:replace="fragments::saveButton"></button>
-            </form>-->
-            <!-- FULL VALIDATION -->
             <form class="needs-validation" novalidate id="form" th:action="@{/user/editPassword}" th:object="${formPassword}" method="POST" action="#">
                 <div class="form-group">
                     <label for="currentPassword">Current Password:</label>
                     <input class="form-control" type="password" th:field="*{currentPassword}" id="currentPassword" placeholder="enter current password" required/>
                     <div class="invalid-feedback">Please introduce your current password</div>
-                    <div th:replace="fragments::backendValidationErrors('currentPassword')"></div>
+                    <div th:replace="fragments/components::backendValidationErrors('currentPassword')"></div>
                 </div>
                 <div class="form-group">
                     <label for="newPassword">New Password:</label>
                     <input class="form-control" type="password" th:field="*{password}" id="newPassword" placeholder="enter new password" required th:pattern="${passwordPattern}" th:title="#{password.invalidFormat}"/>
                     <div class="invalid-feedback" th:text="#{password.invalidFormat}">Please fill out this field with a valid password</div>
-                    <div th:replace="fragments::backendValidationErrors('password')"></div>
+                    <div th:replace="fragments/components::backendValidationErrors('password')"></div>
                 </div>
                 <div class="form-group">
                     <label for="newPasswordConfirm">Confirm New Password:</label>
                     <input class="form-control" type="password" th:field="*{matchingPassword}" id="newPasswordConfirm" placeholder="confirm new password" required pattern=".*" title="Please enter the same password as above"/>
                     <div class="invalid-feedback" th:text="#{password.notMatching}">Please enter the same password as above</div>
-                    <div th:replace="fragments::backendValidationErrors('matchingPassword')"></div>
+                    <div th:replace="fragments/components::backendValidationErrors('matchingPassword')"></div>
                 </div>
-                <button th:replace="fragments::saveButton"></button>
+                <button th:replace="fragments/components::saveButton"></button>
             </form>
         </div>
-        <footer th:replace="fragments::footer"></footer>
-        <script th:replace="fragments::matchingPasswords"></script>
-        <script th:replace="fragments::disableFormSubmissionOnInvalidField"></script>
+        <footer th:replace="fragments/layout::footer"></footer>
+        <script th:replace="fragments/scripts::matchingPasswords"></script>
+        <script th:replace="fragments/scripts::disableFormSubmissionOnInvalidField"></script>
     </body>
 </html>
