--- a/src/main/resources/templates/newBook.html
+++ b/src/main/resources/templates/newBook.html
@@ -2,9 +2,9 @@
 <html xmlns="http://www.w3.org/1999/xhtml"
       xmlns:th="http://www.thymeleaf.org"
       lang="en">
-    <head th:replace="fragments::head"></head>
+    <head th:replace="fragments/layout::head('New Book')"></head>
     <body>
-        <header th:replace="fragments::header"></header>
+        <header th:replace="fragments/layout::header"></header>
         <div class="container">
             <ul class="breadcrumb my-2">
                 <li class="breadcrumb-item"><a th:href="@{/home}">Home</a></li>
@@ -17,13 +17,13 @@
                     <label for="isbn">ISBN:</label>
                     <input class="form-control" type="text" th:field="*{isbn}" id="isbn" placeholder="enter isbn" required th:pattern="${isbnPattern}">
                     <div class="invalid-feedback">Please fill out this field with a valid ISBN</div>
-                    <div th:replace="fragments::backendValidationErrors('isbn')"></div>
+                    <div th:replace="fragments/components::backendValidationErrors('isbn')"></div>
                 </div>
                 <div class="form-group">
                     <label for="title">Title:</label>
                     <input class="form-control" type="text" th:field="*{title}" id="title" placeholder="enter title" th:pattern="${textBasicPattern}">
                     <div class="invalid-feedback">Please fill out this field correctly</div>
-                    <div th:replace="fragments::backendValidationErrors('title')"></div>
+                    <div th:replace="fragments/components::backendValidationErrors('title')"></div>
                 </div>
                 <div class="form-group">
                     <label for="category">Category:</label>
@@ -48,14 +48,14 @@
                     <input type="checkbox" id="switch" onclick="binaryInputSwitch()"/>
                     <input class="form-control" type="file" th:field="*{image}" id="input2" disabled accept="image/*" required/>
                     <div class="invalid-feedback">Please select an image</div>
-                    <div th:replace="fragments::backendValidationErrors('image')"></div>
+                    <div th:replace="fragments/components::backendValidationErrors('image')"></div>
                 </div>
-                <button th:replace="fragments::saveButton"></button>
+                <button th:replace="fragments/components::saveButton"></button>
             </form>
         </div>
-        <footer th:replace="fragments::footer"></footer>
-        <script th:replace="fragments::disableFormSubmissionOnInvalidField"></script>
-        <script th:replace="fragments::isbnChecksum"></script>
-        <script th:replace="fragments::binaryInputSwitch"></script>
+        <footer th:replace="fragments/layout::footer"></footer>
+        <script th:replace="fragments/scripts::disableFormSubmissionOnInvalidField"></script>
+        <script th:replace="fragments/scripts::isbnChecksum"></script>
+        <script th:replace="fragments/scripts::binaryInputSwitch"></script>
     </body>
 </html>
