--- a/src/main/resources/templates/editCategory.html
+++ b/src/main/resources/templates/editCategory.html
@@ -2,9 +2,9 @@
 <html xmlns="http://www.w3.org/1999/xhtml"
       xmlns:th="http://www.thymeleaf.org"
       lang="en">
-    <head th:replace="fragments::head"></head>
+    <head th:replace="fragments/layout::head('Edit Category')"></head>
     <body>
-        <header th:replace="fragments::header"></header>
+        <header th:replace="fragments/layout::header"></header>
         <div class="container">
             <ul class="breadcrumb my-2">
                 <li class="breadcrumb-item"><a th:href="@{/home}">Home</a></li>
@@ -12,28 +12,6 @@
                 <li class="breadcrumb-item active">Edit Category</li>
             </ul>
             <h3>Edit Category</h3>
-            <!-- BACKEND-ONLY VALIDATION
-            <form th:action="@{/admin/editCategory}" th:object="${category}" method="POST" action="#">
-                <input type="hidden" th:field="*{id}"/>
-                <input type="hidden" th:field="*{parent.name}"/>
-                <div class="form-group">
-                    <label for="name">Name:</label>
-                    <input type="text" th:field="*{name}" class="form-control" id="name" placeholder="enter name" />
-                    <div th:replace="fragments::backendValidationErrors('name')"></div>
-                </div>
-                <div class="form-group">
-                    <label for="parent">Nested under:</label>
-                    <select th:field="*{parent.id}" class="custom-select" id="parent">
-                        <option th:each="ic : ${indentedCategories}"
-                                th:value="${ic.id}"
-                                th:text="${ic.name}"
-                                th:selected="${ic.id==category.parent.id}"
-                                th:disabled="${descendants.contains(ic)}">
-                        </option>
-                    </select>
-                </div>
-                <button th:replace="fragments::saveButton"></button>
-            </form>-->
             <form class="needs-validation" novalidate th:action="@{/admin/editCategory}" th:object="${category}" method="POST" action="#">
                 <input type="hidden" th:field="*{id}"/>
                 <input type="hidden" th:field="*{parent.name}"/>
@@ -41,7 +19,7 @@
                     <label for="name">Name:</label>
                     <input class="form-control" type="text" th:field="*{name}" id="name" placeholder="enter name" th:pattern="${textBasicPattern}">
                     <div class="invalid-feedback">Please fill out this field correctly</div>
-                    <div th:replace="fragments::backendValidationErrors('name')"></div>
+                    <div th:replace="fragments/components::backendValidationErrors('name')"></div>
                 </div>
                 <div class="form-group">
                     <label for="parent">Nested under:</label>
@@ -54,10 +32,10 @@
                         </option>
                     </select>
                 </div>
-                <button th:replace="fragments::saveButton"></button>
+                <button th:replace="fragments/components::saveButton"></button>
             </form>
         </div>
-        <footer th:replace="fragments::footer"></footer>
-        <script th:replace="fragments::disableFormSubmissionOnInvalidField"></script>
+        <footer th:replace="fragments/layout::footer"></footer>
+        <script th:replace="fragments/scripts::disableFormSubmissionOnInvalidField"></script>
     </body>
 </html>
