header navbar modification

--- a/src/main/resources/templates/home.html
+++ b/src/main/resources/templates/home.html
@@ -76,7 +76,7 @@
                             </div>
                             <div>
                                 <a class="btn btn-outline-dark btn-sm" th:href="@{/user/addBook/{id}(id=${book.id})}" data-toggle="tooltip" title="Add to Cart">
-                                    <i class="fas fa-cart-plus mx-3"></i>
+                                    <i class="fas fa-cart-plus mx-3 fa-lg"></i>
                                 </a>
                             </div>
                         </div>
