--- a/src/main/resources/templates/fragments/layout.html
+++ b/src/main/resources/templates/fragments/layout.html
@@ -21,7 +21,7 @@
             <div class="col-lg-12">
                 <header>
                     <!-- NavBar -->
-                    <nav class="navbar navbar-expand-sm navbar-dark bg-dark">
+                    <nav class="navbar navbar-expand-sm bg-dark"><!--navbar-dark-->
                         <!-- Brand -->
                         <a class="navbar-brand" th:href="@{/home}">
                             <img th:src="@{/images/logo.png}" style="width:32px;height:32px;">
@@ -39,14 +39,13 @@
                                     <a class="nav-link" th:href="@{/home}">Home</a>
                                 </li>
                                 <!-- Dropdown (not Admin) -->
-                                <div sec:authorize="!hasRole('ADMIN')">
+                                <div sec:authorize="isAuthenticated() && !hasRole('ADMIN')">
                                     <li class="nav-item dropdown">
-                                        <a class="nav-link dropdown-toggle" href="#" data-toggle="dropdown">My FirstMarket</a><!--id="navbardrop"-->
+                                        <a class="nav-link dropdown-toggle" href="#" data-toggle="dropdown">My Account</a><!--id="navbardrop"-->
                                         <div class="dropdown-menu">
-                                            <a class="dropdown-item" th:href="@{/user/editProfile}">Edit Profile</a>
+                                            <a class="dropdown-item" th:href="@{/user/editProfile}">Profile</a>
+                                            <a class="dropdown-item" th:href="@{/user/purchases}">Purchases</a>
                                             <a class="dropdown-item" th:href="@{/user/editPassword}">Edit Password</a>
-                                            <a class="dropdown-item" th:href="@{/user/cart}">View Cart</a>
-                                            <a class="dropdown-item" th:href="@{/user/purchases}">My Purchases</a>
                                         </div>
                                     </li>
                                 </div>
@@ -64,17 +63,27 @@
                                     </li>
                                 </div>
                             </ul>
-                            <div sec:authorize="!isAuthenticated()">
-                                <a class="btn btn-outline-info btn-sm" th:href="@{/login}">Login</a>
-                            </div>
                             <div sec:authorize="isAuthenticated()">
-                                <div class="navbar-text p-2">Hi <span sec:authentication="name"/>!</div>
+                                <div class="navbar-text p-2 text-primary"><small><span sec:authentication="name"/></small></div>
+                            </div>
+                            <div>
+                                <a th:href="@{/user/cart}" data-toggle="tooltip" title="View Cart">
+                                    <i class="fas fa-shopping-cart mx-2 fa-lg"><span class="badge badge-pill badge-primary">0</span></i>
+                                </a>
+                            </div>
+                            <div sec:authorize="!isAuthenticated()">
+                                <a class="btn btn-outline-primary btn-sm font-weight-bold mx-2" th:href="@{/login}" data-toggle="tooltip" title="Login">
+                                    Login<i class="fas fa-sign-in-alt ml-2"></i>
+                                </a>
                             </div>
                             <div sec:authorize="isAuthenticated()">
                                 <form class="form-inline my-2 my-lg-0 p-2" th:action="@{/logout}" method="POST" id="logoutForm" action="#">
-                                    <input class="btn btn-outline-info btn-sm" type="submit" value="Logout"/>
+                                    <button class="btn btn-outline-primary btn-sm font-weight-bold mx-2" type="submit" data-toggle="tooltip" title="Logout">
+                                        Logout<i class="fas fa-sign-out-alt ml-2"></i>
+                                    </button>
                                 </form>
                             </div>
+
                         </div>
                     </nav>
                 </header>
