--- a/src/main/resources/static/fmstyle.css
+++ b/src/main/resources/static/fmstyle.css
@@ -4,7 +4,35 @@
     font-size: calc(75% + .25vw + 0vh);
 }
 
+/*
+$shopping-cart-red: #DF0000;
+ */
 
+.fa-stack[data-count]::after{
+    position:absolute;
+    right:23%;
+    top:0%;
+    content: attr(data-count);
+    font-size:70%;
+    padding:.35em;
+    border-radius:999px;
+    line-height:.75em;
+    color: white;
+    color: #0275d8; /* bs4 primary */
+    text-align:center;
+    min-width:1em;
+    font-weight:bold;
+    background: white;
+
+}
+.fa-circle {
+    color: #0275d8; /* bs4 primary */
+}
+
+.primary-over-dark {
+    color: #0275d8; /* bs4 primary */
+    background: #343a40; /* bs4 dark */
+}
 
 
 
