--- a/src/main/resources/templates/fragments/layout.html
+++ b/src/main/resources/templates/fragments/layout.html
@@ -17,7 +17,7 @@
     </head>
 
     <body>
-        <div class="row" th:fragment="header">
+        <div class="row" th:fragment="header(userName, numItems)">
             <div class="col-lg-12">
                 <header>
                     <!-- NavBar -->
@@ -36,7 +36,7 @@
                         <div class="collapse navbar-collapse" id="#collapsibleNavbar">
                             <ul class="navbar-nav mr-auto">
                                 <li class="nav-item">
-                                    <a class="nav-link" th:href="@{/home}">Home</a>
+                                    <a class="nav-link font-weight-bold" th:href="@{/home}">Home</a>
                                 </li>
                                 <!-- Dropdown (not Admin) -->
                                 <div sec:authorize="isAuthenticated() && !hasRole('ADMIN')">
@@ -68,7 +68,10 @@
                             </div>
                             <div>
                                 <a th:href="@{/user/cart}" data-toggle="tooltip" title="View Cart">
-                                    <i class="fas fa-shopping-cart mx-2 fa-lg"><span class="badge badge-pill badge-primary">0</span></i>
+                                    <span class="fa-stack has-badge mx-2" data-count="${user.cart.items.size}">
+                                        <i class="fa fa-circle fa-stack-2x fa-inverse"></i>
+                                        <i class="fa fa-shopping-cart fa-stack-2x primary-over-dark"></i>
+                                    </span>
                                 </a>
                             </div>
                             <div sec:authorize="!isAuthenticated()">
