--- a/src/main/resources/templates/editProfile.html
+++ b/src/main/resources/templates/editProfile.html
@@ -4,8 +4,8 @@
       lang="en">
     <head th:replace="fragments/layout::head('Edit Profile')"></head>
     <body>
-        <header th:replace="fragments/layout::header"></header>
-        <div class="container">
+        <div class="container-fluid">
+            <div th:replace="fragments/layout::header"></div>
             <ul class="breadcrumb my-2">
                 <li class="breadcrumb-item"><a th:href="@{/home}">Home</a></li>
                 <li class="breadcrumb-item active">Edit Profile</li>
@@ -26,8 +26,8 @@
                 </div>
                 <button th:replace="fragments/components::saveButton"></button>
             </form>
+            <footer th:replace="fragments/layout::footer"></footer>
         </div>
-        <footer th:replace="fragments/layout::footer"></footer>
         <script th:replace="fragments/scripts::disableFormSubmissionOnInvalidField"></script>
     </body>
 </html>
