--- a/src/main/resources/templates/fragments/layout.html
+++ b/src/main/resources/templates/fragments/layout.html
@@ -7,7 +7,7 @@
     <head th:fragment="head(title)">
         <meta charset="UTF-8">
         <title th:text="${title}"></title>
-        <link type="text/css" rel="stylesheet" th:href="@{fmstyle.css}" />
+        <link type="text/css" rel="stylesheet" th:href="@{/fmstyle.css}" />
         <meta name="viewport" content="width=device-width, initial-scale=1">
         <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.4.1/css/bootstrap.min.css">
         <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.4.1/jquery.min.js"></script>
@@ -17,7 +17,7 @@
     </head>
 
     <body>
-        <div class="row" th:fragment="header(userName, numItems)">
+        <div class="row" th:fragment="header">
             <div class="col-lg-12">
                 <header>
                     <!-- NavBar -->
@@ -39,9 +39,10 @@
                                     <a class="nav-link font-weight-bold" th:href="@{/home}">Home</a>
                                 </li>
                                 <!-- Dropdown (not Admin) -->
-                                <div sec:authorize="isAuthenticated() && !hasRole('ADMIN')">
+                                <!--<div sec:authorize="isAuthenticated() && !hasRole('ADMIN')">-->
+                                <div sec:authorize="!hasRole('ADMIN')">
                                     <li class="nav-item dropdown">
-                                        <a class="nav-link dropdown-toggle" href="#" data-toggle="dropdown">My Account</a><!--id="navbardrop"-->
+                                        <a class="nav-link dropdown-toggle font-weight-bold" href="#" data-toggle="dropdown">My Account</a><!--id="navbardrop"-->
                                         <div class="dropdown-menu">
                                             <a class="dropdown-item" th:href="@{/user/editProfile}">Profile</a>
                                             <a class="dropdown-item" th:href="@{/user/purchases}">Purchases</a>
@@ -64,19 +65,16 @@
                                 </div>
                             </ul>
                             <div sec:authorize="isAuthenticated()">
-                                <div class="navbar-text p-2 text-primary"><small><span sec:authentication="name"/></small></div>
+                                <div class="navbar-text p-2 text-primary">
+                                    Hi, <span th:text="${firstName}"/>!
+                                </div>
                             </div>
-                            <div>
+                            <div sec:authorize="isAuthenticated() && !hasRole('ADMIN')">
                                 <a th:href="@{/user/cart}" data-toggle="tooltip" title="View Cart">
-                                    <span class="fa-stack has-badge mx-2" data-count="${user.cart.items.size}">
+                                    <span class="fa-stack has-badge mx-2" th:data-count="${cartSize}">
                                         <i class="fa fa-circle fa-stack-2x fa-inverse"></i>
                                         <i class="fa fa-shopping-cart fa-stack-2x primary-over-dark"></i>
                                     </span>
-                                </a>
-                            </div>
-                            <div sec:authorize="!isAuthenticated()">
-                                <a class="btn btn-outline-primary btn-sm font-weight-bold mx-2" th:href="@{/login}" data-toggle="tooltip" title="Login">
-                                    Login<i class="fas fa-sign-in-alt ml-2"></i>
                                 </a>
                             </div>
                             <div sec:authorize="isAuthenticated()">
@@ -86,7 +84,11 @@
                                     </button>
                                 </form>
                             </div>
-
+                            <div sec:authorize="!isAuthenticated()">
+                                <a class="btn btn-outline-primary btn-sm font-weight-bold mx-2" th:href="@{/login}" data-toggle="tooltip" title="Login">
+                                    Login<i class="fas fa-sign-in-alt ml-2"></i>
+                                </a>
+                            </div>
                         </div>
                     </nav>
                 </header>
