--- a/src/main/resources/templates/fragments/layout.html
+++ b/src/main/resources/templates/fragments/layout.html
@@ -18,7 +18,7 @@
 
     <body>
         <div class="row" th:fragment="header">
-            <div class="col-lg-12">
+            <div class="col-sm-12">
                 <header>
                     <!-- NavBar -->
                     <nav class="navbar navbar-expand-sm bg-dark"><!--navbar-dark-->
@@ -26,12 +26,10 @@
                         <a class="navbar-brand" th:href="@{/home}">
                             <img th:src="@{/images/logo.png}" style="width:32px;height:32px;">
                         </a>
-
                         <!-- Toggler/collapsibe Button -->
                         <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#collapsibleNavbar">
                             <span class="navbar-toggler-icon"></span>
                         </button>
-
                         <!-- Navbar links -->
                         <div class="collapse navbar-collapse" id="#collapsibleNavbar">
                             <ul class="navbar-nav mr-auto">
@@ -39,8 +37,7 @@
                                     <a class="nav-link font-weight-bold" th:href="@{/home}">Home</a>
                                 </li>
                                 <!-- Dropdown (not Admin) -->
-                                <!--<div sec:authorize="isAuthenticated() && !hasRole('ADMIN')">-->
-                                <div sec:authorize="!hasRole('ADMIN')">
+                                <div sec:authorize="!hasRole('ADMIN')"><!--<div sec:authorize="isAuthenticated() && !hasRole('ADMIN')">-->
                                     <li class="nav-item dropdown">
                                         <a class="nav-link dropdown-toggle font-weight-bold" href="#" data-toggle="dropdown">My Account</a><!--id="navbardrop"-->
                                         <div class="dropdown-menu">
@@ -50,21 +47,8 @@
                                         </div>
                                     </li>
                                 </div>
-                                <!-- Dropdown (Admin) -->
-                                <div sec:authorize="hasRole('ADMIN')">
-                                    <li class="nav-item dropdown">
-                                        <a class="nav-link dropdown-toggle text-info" href="#" data-toggle="dropdown">Admin</a><!--id="navbardrop"-->
-                                        <div class="dropdown-menu">
-                                            <a class="dropdown-item text-info" th:href="@{/admin/books}">Books</a>
-                                            <a class="dropdown-item text-info" th:href="@{/admin/categories}">Categories</a>
-                                            <a class="dropdown-item text-info" th:href="@{/admin/images}">Images</a>
-                                            <a class="dropdown-item text-info" th:href="@{/admin/users}">Users</a>
-                                            <a class="dropdown-item text-info" th:href="@{/admin/purchases}">Purchases</a>
-                                        </div>
-                                    </li>
-                                </div>
                             </ul>
-                            <div sec:authorize="isAuthenticated()">
+                            <div sec:authorize="isAuthenticated() && !hasRole('ADMIN')">
                                 <div class="navbar-text p-2 text-primary">
                                     Hi, <span th:text="${firstName}"/>!
                                 </div>
@@ -92,6 +76,24 @@
                         </div>
                     </nav>
                 </header>
+            </div>
+            <div class="col-sm-12" sec:authorize="hasRole('ADMIN')">
+                <nav class="navbar navbar-expand-sm bg-info">
+                    <!-- Toggler/collapsibe Button -->
+                    <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#collapsibleAdminNavbar">
+                        <span class="navbar-toggler-icon"></span>
+                    </button>
+                    <!-- Navbar links -->
+                    <div class="collapse navbar-collapse" id="#collapsibleAdminNavbar">
+                        <ul class="navbar-nav">
+                            <li class="nav-item"><a class="nav-link text-white font-weight-bold" th:href="@{/admin/books}">Books</a></li>
+                            <li class="nav-item"><a class="nav-link text-white font-weight-bold" th:href="@{/admin/categories}">Categories</a></li>
+                            <li class="nav-item"><a class="nav-link text-white font-weight-bold" th:href="@{/admin/images}">Images</a></li>
+                            <li class="nav-item"><a class="nav-link text-white font-weight-bold" th:href="@{/admin/users}">Users</a></li>
+                            <li class="nav-item"><a class="nav-link text-white font-weight-bold" th:href="@{/admin/purchases}">Purchases</a></li>
+                        </ul>
+                    </div>
+                </nav>
             </div>
         </div>
 
