--- a/src/main/resources/templates/home.html
+++ b/src/main/resources/templates/home.html
@@ -55,9 +55,9 @@
                 <div class="col-sm-8 col-lg-9 bg-success">
                     <div class="row d-flex align-content-stretch justify-content-between flex-wrap">
                         <div class="card col-xs-12 col-sm-4 col-lg-2 m-2 p-0" th:each="book : ${books}">
-                            <img class="card-img-top img-responsive" th:src="@{/image/{id}(id=${book.image.id})}" />
+                            <a th:href="@{/book/{id}(id=${book.id})}"><img class="card-image card-img-top img-responsive" th:src="@{/image/{id}(id=${book.image.id})}"/></a>
                             <div class="card-body">
-                                <p class="card-title text-responsive" th:text="${book.title}">title</p>
+                                <a th:href="@{/book/{id}(id=${book.id})}"><p class="card-title text-responsive font-weight-bold" th:text="${book.title}">title</p></a>
                                 <div class="card-text">
                                     <small th:each="author : ${book.authors}">
                                         <span th:text="${author.lastName}">lastName</span>,
